app: semantic version: generate from git tags, use via const
Usage: none. Just make a new git tag for each release, in most cases using the generated string. Once the tag is in a branch, the script will output a new valid version.

Squashed commit of the following:

commit 32c22760338e41becb372ee2fc4a05745683eb2d
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 19:53:54 2015 +0200

    fixup! deco: semver: adjust to and use new config hash

commit 3b4a5d5fc7253cc408478eca7439702762073690
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 18:58:58 2015 +0200

    deco: semver: adjust to and use new config hash

commit 000c353f95eb1e14d43d20174d4f53b8f1e80bc0
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:59:32 2015 +0200

    ci: check out submodules for all Rails tests

commit 7f1fe4c62b120a9c05c82173686b14fa5966d403
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:51:07 2015 +0200

    config:get semver from script, remove from settings.yml

commit 4c3f2fd16052000c199d3f69341d1dd566c4f76c
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:50:20 2015 +0200

    bin: add script to get current semver as JSON

commit 8e329ab44f69d0886f9fa59dd48af844a3be8230
Author: Max F. Albrecht <1@178.is>
Date:   Mon Apr 20 17:48:45 2015 +0200

    submodules: add lib/git-describe-semver

--- a/.cider-ci/partials/rails_integration_task_defaults.yml
+++ b/.cider-ci/partials/rails_integration_task_defaults.yml
@@ -1,4 +1,8 @@
-task_defaults: 
+task_defaults:
+
+  git_options:
+    submodules:
+      clone: true
 
   traits:
     firefox-esr: true
@@ -6,17 +10,17 @@ task_defaults:
     tightvnc: true
 
   trial_attachments:
-    screenshots: 
+    screenshots:
       glob: 'tmp/capybara/*.png'
       content-type: image/png
 
-  ports: 
-    xvnc_port: 
+  ports:
+    xvnc_port:
       inet_address: "localhost"
       min: 5900
       max: 5999
 
-  scripts: 
+  scripts:
 
     startx:
       order: 5
@@ -26,8 +30,7 @@ task_defaults:
       order: 6
       timeout: 300
 
-    stopx: 
+    stopx:
       order: 9
       type: post_process
       body: tightvncserver -kill ":$XVNC_PORT" -clean
-
