--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deploy/ansible"]
 	path = deploy/ansible
 	url = https://github.com/Madek/madek-ansible.git
+[submodule "lib/git-describe-semver"]
+	path = lib/git-describe-semver
+	url = https://github.com/eins78/git-describe-semver
