admin: Fix Vocables -> Keywords
The recent migration unifying the vocables with keywords broke some things in the Admin Interface because there are no vocables any more.

[delivers #91582266]

Squashed commit of the following:
commit 6107e245c2065c28dba93d771db73f06a8323c1a
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri Apr 17 13:39:07 2015 +0200

    fix fkey name, add cascade action when keyword term is deleted

commit a80694de4bef9f725575f1d07548b7d20bd20f8c
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Fri Apr 17 11:30:43 2015 +0200

    fix vocables -> keywords unification

commit 37fc7e0027b5b357399cb037be3451a1948ac47b
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Thu Apr 16 10:48:36 2015 +0200

    fix admin tests

commit e9dcfa3cbab749ba32e1532e7d0c88fc2bc432c3
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Tue Mar 17 09:23:51 2015 +0100

    Admin interface: extend Meta Keys form with new fields

--- a/.cider-ci/tasks/rspec-feature-tasks.yml
+++ b/.cider-ci/tasks/rspec-feature-tasks.yml
@@ -19,6 +19,11 @@
   scripts:
     main:
       body: DISPLAY=":$XVNC_PORT" bundle exec rspec "./spec/features/admin/media_entries_spec.rb"
+"./spec/features/admin/meta_datums_spec.rb":
+  name: "./spec/features/admin/meta_datums_spec.rb"
+  scripts:
+    main:
+      body: DISPLAY=":$XVNC_PORT" bundle exec rspec "./spec/features/admin/meta_datums_spec.rb"
 "./spec/features/admin/meta_keys_spec.rb":
   name: "./spec/features/admin/meta_keys_spec.rb"
   scripts:
