--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -19,11 +19,31 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/admin/groups_controller_spec.rb"
+"./spec/controllers/admin/keyword_terms_controller_spec.rb":
+  name: "./spec/controllers/admin/keyword_terms_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/keyword_terms_controller_spec.rb"
+"./spec/controllers/admin/media_entries_controller_spec.rb":
+  name: "./spec/controllers/admin/media_entries_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/media_entries_controller_spec.rb"
 "./spec/controllers/admin/media_files_controller_spec.rb":
   name: "./spec/controllers/admin/media_files_controller_spec.rb"
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/admin/media_files_controller_spec.rb"
+"./spec/controllers/admin/meta_datums_controller_spec.rb":
+  name: "./spec/controllers/admin/meta_datums_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/meta_datums_controller_spec.rb"
+"./spec/controllers/admin/meta_keys_controller_spec.rb":
+  name: "./spec/controllers/admin/meta_keys_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/admin/meta_keys_controller_spec.rb"
 "./spec/controllers/admin/previews_controller_spec.rb":
   name: "./spec/controllers/admin/previews_controller_spec.rb"
   scripts:
