--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.1",
+    "check-dependencies": "^0.9.2",
     "git-describe-semver": "git+https://git@github.com/eins78/git-describe-semver#7df5522f",
     "jquery": "^2.1.3",
     "lodash": "^2.4.1",
