--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -74,6 +74,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/my_controller_spec.rb"
+"./spec/integration/meta_data/create_meta_datum_spec.rb":
+  name: "./spec/integration/meta_data/create_meta_datum_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/integration/meta_data/create_meta_datum_spec.rb"
 "./spec/lib/system_execute_cmd_spec.rb":
   name: "./spec/lib/system_execute_cmd_spec.rb"
   scripts:
