--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "check-dependencies": "^0.9.2",
     "git-describe-semver": "git+https://git@github.com/eins78/git-describe-semver#7df5522f",
     "jquery": "^2.1.3",
-    "lodash": "^2.4.1",
-    "moment": "^2.8.4",
-    "pdfjs-dist": "^1.1.82",
-    "po2json": "^0.3.2",
+    "lodash": "^3.8.0",
+    "moment": "^2.10.3",
+    "pdfjs-dist": "^1.1.124",
+    "po2json": "^0.4.1",
     "typeahead.js": "^0.10.5",
-    "underscore.string": "^2.4.0"
+    "underscore.string": "^3.0.3"
   },
   "devDependencies": {
     "browserify": "~> 6.3",
     "browserify-incremental": "^1.4.0",
     "browserify-shim": "^3.8.1",
     "coffee-script": "^1.9.2",
-    "coffeeify": "~> 0.6",
+    "coffeeify": "^1.1.0",
     "istanbul": "^0.3.5",
-    "tape": "^3.0.3"
+    "tape": "^4.0.0"
   },
   "transform": [
     "browserify-shim",
