search_json_api [#94165030]
for index actions of all relevant meta data controllers

--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -89,6 +89,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/my_controller_spec.rb"
+"./spec/controllers/people_controller_spec.rb":
+  name: "./spec/controllers/people_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/people_controller_spec.rb"
 "./spec/lib/system_execute_cmd_spec.rb":
   name: "./spec/lib/system_execute_cmd_spec.rb"
   scripts:
