--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "any_sha1": "^0.1.1",
     "bootstrap": "^3.3.4",
     "check-dependencies": "^0.9.2",
     "git-describe-semver": "git+https://git@github.com/eins78/git-describe-semver#7df5522f",
+    "hashblot": "^0.4.5",
     "jquery": "^2.1.3",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
