--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "check-dependencies": "^0.9.2",
     "git-describe-semver": "git+https://git@github.com/eins78/git-describe-semver#7df5522f",
     "hashblot": "^0.4.5",
+    "hogan.js": "^3.0.2",
     "jquery": "^2.1.3",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
     "pdfjs-dist": "^1.1.124",
     "po2json": "^0.4.1",
-    "typeahead.js": "^0.10.5",
+    "rusha": "^0.8.2",
+    "typeahead.js": "^0.11.1",
     "underscore.string": "^3.0.3"
   },
   "devDependencies": {
