--- a/.cider-ci/tasks/rspec-tasks.yml
+++ b/.cider-ci/tasks/rspec-tasks.yml
@@ -69,6 +69,11 @@
   scripts:
     main:
       body: bundle exec rspec "./spec/controllers/application_controller_spec.rb"
+"./spec/controllers/media_entries_controller_spec.rb":
+  name: "./spec/controllers/media_entries_controller_spec.rb"
+  scripts:
+    main:
+      body: bundle exec rspec "./spec/controllers/media_entries_controller_spec.rb"
 "./spec/controllers/meta_data/create_meta_datum_spec.rb":
   name: "./spec/controllers/meta_data/create_meta_datum_spec.rb"
   scripts:
