ci: increase timeout for deploy-with-full-reset

--- a/.cider-ci/deploy_test_with_data_reset_spec.yml
+++ b/.cider-ci/deploy_test_with_data_reset_spec.yml
@@ -25,4 +25,4 @@ tasks:
         body: |
           cd deploy/ansible && \
           ansible-playbook -i hosts_zhdk-test play_setup-and-deploy.yml -e 'reset_data=True'
-        timeout: 18000
+        timeout: 28800 # 8 hours
