Enable deployment to test via CI

--- a/.cider-ci.yml
+++ b/.cider-ci.yml
@@ -1,5 +1,6 @@
 _cider-ci_include: 
-  - .cider-ci/jobs/tests-mri.yml
-  - .cider-ci/jobs/tests-jruby.yml
-  - .cider-ci/jobs/coverage.yml
   - .cider-ci/jobs/code-check.yml
+  - .cider-ci/jobs/coverage.yml
+  - .cider-ci/jobs/deploy.yml
+  - .cider-ci/jobs/tests-jruby.yml
+  - .cider-ci/jobs/tests-mri.yml
