Upgrade to use Cider-CI v3
Squashed commit of the following:

commit d8e38e9f9837b899d62057fc28e41e750370b43e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 11:26:29 2015 +0200

    Fix ci spec

commit a5fc8324afd8b429bb793f0e3a7edd922a729c43
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:56:13 2015 +0200

    Remove coverage config

commit 8e22abd0562a2883eba8bbca9f5f4752cb25be39
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:55:12 2015 +0200

    Enable all the tests again

commit 96d6a4ea7634bf1d0cca86d6c2ac39aada1f504a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:53:43 2015 +0200

    Don't bundle jruby

commit 33fa5f44dc8719955976663186d1f26116306657
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:52:48 2015 +0200

    Grrr

commit 7264b3761b8058ef2c3417a04f62cdba925f5524
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:50:30 2015 +0200

    Fix

commit eca242b7070fb27cf716ab1e62422f17d2384d54
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:33:47 2015 +0200

    Ouch, that went badly

commit ac987cadac5dba7a08242292bf34a7951459c0bd
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Jun 19 08:09:16 2015 +0200

    Upgrade to Cider-CI v3

--- a/.cider-ci.yml
+++ b/.cider-ci.yml
@@ -1,14 +1,4 @@
-executions:
-
-  Tests: 
-    default: true
-    specification: 
-      _cider-ci_include: /.cider-ci/test_spec.yml
-    trigger: 
-      branch: next
-
-  Coverage: 
-    specification: 
-      _cider-ci_include: /.cider-ci/coverage_spec.yml
-
-
+_cider-ci_include:
+  - .cider-ci/jobs/tests-mri.yml
+  - .cider-ci/jobs/tests-jruby.yml
+  - .cider-ci/jobs/code-check.yml
