Adjust setting for spec/features/meta_data/meta_data_institutional_groups_spec.rb on CI
Squashed commit of the following:

commit e786b4a3a7f52db92ae133ba62f8f9ec49e9c121
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 22 12:03:37 2015 +0200

    ...

commit 069b710fca7f7fa20f1ea23b69d9998c5e7e2c65
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 22 12:02:30 2015 +0200

--- a/.cider-ci/shared/tests-context.yml
+++ b/.cider-ci/shared/tests-context.yml
@@ -128,7 +128,18 @@ subcontexts:
   _cider-ci_generate-tasks:
     include-match: spec/features.*_spec.rb
 
-#  tasks:
-#    spec/features/my_dashboard_spec.rb:
-#      environment-variables:
-#        CIDER_CI_TASK_FILE: spec/models/person/person_spec.rb
+
+  tasks:
+    spec/features/meta_data/meta_data_institutional_groups_spec.rb:
+      environment-variables:
+        CIDER_CI_TASK_FILE: spec/features/meta_data/meta_data_institutional_groups_spec.rb
+      scripts:
+        setup-config:
+          body: |
+            echo 'zhdk_integration: true' > 'config/settings.local.yml'
+        main:
+          start-when:
+          - script: create-database
+          - script: setup-config
+          - script: setup-madek
+          - script: start-vnc
