--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pdfjs-dist": "^1.1.124",
     "po2json": "^0.4.1",
     "rusha": "^0.8.2",
-    "typeahead.js": "^0.11.1",
+    "@eins78/typeahead.js": "^0.11.2-pre.1+forked",
     "underscore.string": "^3.0.3"
   },
   "devDependencies": {
