ci: exclusive-global-resources

--- a/.cider-ci/shared/deploy-context.yml
+++ b/.cider-ci/shared/deploy-context.yml
@@ -10,7 +10,7 @@ task-defaults:
     linux: true
     ansible: true
 
-  exclusive-resources:
+  exclusive-global-resources:
     "test.madek.zhdk.ch": true
 
   git-options:
