--- a/.cider-ci/jobs/tests-mri.yml
+++ b/.cider-ci/jobs/tests-mri.yml
@@ -1,6 +1,6 @@
-jobs: 
+jobs:
 
-  tests-mri: 
+  tests-mri:
 
     name: Tests MRI-2.1
 
@@ -9,12 +9,12 @@ jobs:
 
     priority: 1
 
-    start-on: 
-    - type: branch.updated
-      include-match: ^.*$
+    run-on:
+    - type: branch
+      include-match: ^.*madek-v3.*$
 
-    context: 
-      _cider-ci_include: 
+    context:
+      _cider-ci_include:
         - .cider-ci/shared/tests-context.yml
 
       task-defaults:
