ci: add Meta job, do git sanity checks

--- a/.cider-ci.yml
+++ b/.cider-ci.yml
@@ -1,6 +1,7 @@
-_cider-ci_include: 
+_cider-ci_include:
   - .cider-ci/jobs/code-check.yml
   - .cider-ci/jobs/coverage.yml
   - .cider-ci/jobs/deploy.yml
+  - .cider-ci/jobs/meta.yml
   - .cider-ci/jobs/tests-jruby.yml
   - .cider-ci/jobs/tests-mri.yml
