--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hashblot": "^0.4.5",
     "hogan.js": "^3.0.2",
     "jquery": "^2.1.3",
+    "jquery-ujs": "^1.0.4",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
     "pdfjs-dist": "^1.1.124",
