--- a/cider-ci/jobs/tests_jruby.yml
+++ b/cider-ci/jobs/tests_jruby.yml
@@ -1,13 +1,11 @@
 jobs:
 
-  tests-mri:
+  tests_jruby:
 
-    name: Tests MRI-2.1
+    name: Tests JRuby-9000
 
-    description: |
-      Run all specs under MRI 2.1.
-
-    priority: 1
+    description: >
+      Run all specs under JRuby 9000.
 
     run-on:
     - type: branch
@@ -24,6 +22,4 @@ jobs:
         scripts:
           test:
             environment-variables:
-              RBENV_VERSION: 2.1
-
-
+              RBENV_VERSION: jruby-9000
