--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "private": true,
   "dependencies": {
     "@eins78/typeahead.js": "^0.11.2-pre.1+forked",
+    "ampersand-model": "^5.0.3",
+    "ampersand-react-mixin": "^0.1.4",
     "any_sha1": "^0.1.1",
     "bootstrap": "^3.3.4",
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
     "browserify-shim": "^3.8.1",
     "check-dependencies": "^0.9.2",
-    "coffeeify": "^1.1.0",
     "coffee-script": "^1.9.2",
+    "coffee-reactify": "^4.0.0",
     "hashblot": "^0.4.5",
     "hogan.js": "^3.0.2",
     "jquery": "^2.1.3",
@@ -21,6 +23,8 @@
     "moment": "^2.10.3",
     "pdfjs-dist": "^1.1.124",
     "po2json": "^0.4.1",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
     "rusha": "^0.8.2",
     "underscore.string": "^3.0.3"
   },
