--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@eins78/typeahead.js": "^0.11.2-pre.1+forked",
     "any_sha1": "^0.1.1",
     "bootstrap": "^3.3.4",
+    "browserify": "^10.2.4",
+    "browserify-incremental": "^3.0.1",
+    "browserify-shim": "^3.8.1",
     "check-dependencies": "^0.9.2",
+    "coffeeify": "^1.1.0",
+    "coffee-script": "^1.9.2",
     "hashblot": "^0.4.5",
     "hogan.js": "^3.0.2",
     "jquery": "^2.1.3",
@@ -16,35 +22,16 @@
     "pdfjs-dist": "^1.1.124",
     "po2json": "^0.4.1",
     "rusha": "^0.8.2",
-    "@eins78/typeahead.js": "^0.11.2-pre.1+forked",
     "underscore.string": "^3.0.3"
   },
   "devDependencies": {
     "big-list-of-naughty-strings": "https://github.com/minimaxir/big-list-of-naughty-strings/tarball/master",
-    "browserify": "~> 6.3",
-    "browserify-incremental": "^1.4.0",
-    "browserify-shim": "^3.8.1",
-    "coffee-script": "^1.9.2",
-    "coffeeify": "^1.1.0",
     "istanbul": "^0.3.5",
     "tape": "^4.0.0"
   },
-  "transform": [
-    "browserify-shim",
-    "coffeeify"
-  ],
-  "browserify-shim": {
-    "bootstrap": {
-      "exports": "bootstrap",
-      "depends": {
-        "jquery": "jQuery"
-      }
-    }
-  },
   "scripts": {
     "test": "cd app/assets/javascripts/test && istanbul cover tape *.js",
-    "build": "browserify app/assets/application.js.coffee",
-    "git-semver": "git-describe-semver"
+    "browserify": "browserify"
   },
   "author": "Max Albrecht <max.albrecht@zhdk.ch>",
   "repository": "https://github.com/Madek/madek-webapp.git",
