js: browserify: ignore 'crypto' module
'crypto' ends up in bundle because of open issue with 'hashblot' module, but doesn't hurt since we'd never want it in the browser.

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "tape": "^4.0.0"
   },
   "scripts": {
-    "test": "cd app/assets/javascripts/test && istanbul cover tape *.js",
-    "browserify": "browserify"
+    "test": "cd app/assets/javascripts/test && istanbul cover tape *.js"
   },
   "author": "Max Albrecht <max.albrecht@zhdk.ch>",
   "repository": "https://github.com/Madek/madek-webapp.git",
