--- a/cider-ci/jobs/tests_mri.yml
+++ b/cider-ci/jobs/tests_mri.yml
@@ -13,6 +13,12 @@ jobs:
     - type: branch
       include-match: ^.*madek-v3.*$
 
+    depends-on:
+    - type: job
+      job: tests_mri
+      submodule: ['engines/datalayer']
+      states: [passed]
+
     context:
       _cider-ci_include:
         - cider-ci/shared/tests-context.yml
