--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "bootstrap": "^3.3.4",
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
-    "browserify-shim": "^3.8.1",
     "check-dependencies": "^0.9.2",
     "coffee-script": "^1.9.2",
     "coffee-reactify": "^4.0.0",
@@ -36,6 +35,15 @@
   "scripts": {
     "test": "cd app/assets/javascripts/test && istanbul cover tape *.js",
     "browserify": "browserify"
+  },
+  "browserify": {
+    "transform": [
+      "coffee-reactify",
+      "reactify"
+    ],
+    "ignore": [
+      "crypto"
+    ]
   },
   "author": "Max Albrecht <max.albrecht@zhdk.ch>",
   "repository": "https://github.com/Madek/madek-webapp.git",
