--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "underscore.string": "^3.0.3"
   },
   "devDependencies": {
-    "big-list-of-naughty-strings": "minimaxir/big-list-of-naughty-strings",
+    "big-list-of-naughty-strings": "1.0.0",
     "istanbul": "^0.3.5",
     "tape": "^4.0.0"
   },
