ci: increase timeout for feature tests to 5min

--- a/cider-ci/shared/tests-context.yml
+++ b/cider-ci/shared/tests-context.yml
@@ -136,6 +136,9 @@ subcontexts:
   task-defaults:
     priority: 2
 
+  script-defaults:
+    timeout: 300
+
   tasks:
 
     "spec/features/styleguide_spec.rb":
