--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "private": true,
   "dependencies": {
     "@eins78/typeahead.js": "^0.11.2-pre.1+forked",
-    "ampersand-model": "^5.0.3",
+    "ampersand-model": "^6.0.1",
     "ampersand-react-mixin": "^0.1.4",
     "any_sha1": "^0.1.1",
     "bootstrap": "^3.3.4",
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
-    "check-dependencies": "^0.9.2",
-    "coffee-script": "^1.9.2",
+    "check-dependencies": "^0.10.3",
     "coffee-reactify": "^4.0.0",
+    "coffee-script": "^1.9.2",
     "hashblot": "^0.4.5",
     "hogan.js": "^3.0.2",
     "jquery": "^2.1.3",
-    "jquery-ujs": "^1.0.4",
+    "jquery-ujs": "^1.1.0-1",
     "lodash": "^3.8.0",
     "moment": "^2.10.3",
-    "pdfjs-dist": "^1.1.124",
+    "pdfjs-dist": "^1.1.472",
     "po2json": "^0.4.1",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
