--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@eins78/typeahead.js": "^0.11.2-pre.1+forked",
     "ampersand-model": "^6.0.1",
     "ampersand-react-mixin": "^0.1.4",
+    "ampersand-rest-collection": "^5.0.0",
     "any_sha1": "^0.1.1",
     "bootstrap": "^3.3.4",
     "browserify": "^10.2.4",
@@ -15,6 +16,7 @@
     "coffee-reactify": "^4.0.0",
     "coffee-script": "^1.9.2",
     "hashblot": "^0.4.5",
+    "history": "^1.9.1",
     "hogan.js": "^3.0.2",
     "jquery": "^2.1.3",
     "jquery-ujs": "^1.1.0-1",
