--- a/cider-ci/jobs/code-checks.yml
+++ b/cider-ci/jobs/code-checks.yml
@@ -16,54 +16,84 @@ jobs:
     context:
 
       task-defaults:
-
         eager-trials: 1
         max-auto-trials: 2
         traits:
           linux: true
-          rbenv: true
-          ruby: true
+          bash: true
 
-        environment_variables:
-          RAILS_ENV: test
-          LANG: "en_US.UTF-8"
-          RBENV_VERSION: 2.2
+      subcontexts:
+        ruby:
+          task-defaults:
+            traits:
+              rbenv: true
+              ruby: true
+            environment_variables:
+              RAILS_ENV: test
+              LANG: "en_US.UTF-8"
+              RBENV_VERSION: 2.2
+            scripts:
+              bundle-mri:
+                exclusive-executor-resource: bundler_2.2
+                body: bundle
+              test:
+                start-when:
+                  - script: bundle-mri
 
-        scripts:
-          bundle-mri:
-            exclusive-executor-resource: bundler_2.2
-            body: bundle
-          test:
-            start-when:
-            - script: bundle-mri
+          tasks:
 
-      tasks:
+            code_complexity:
+              name: Code complexity with flog
+              scripts:
+                test:
+                  body: bundle exec cider-ci_flog app/
 
-        code_complexity:
-          name: Code complexity with flog
-          scripts:
-            test:
-              body: bundle exec cider-ci_flog app/
+            code_similarity:
+              name: Code similarity with flay
+              scripts:
+                test:
+                  body: bundle exec cider-ci_flay app/
 
-        code_similarity:
-          name: Code similarity with flay
-          scripts:
-            test:
-              body: bundle exec cider-ci_flay app/
 
-        lint_haml:
-          name: Lint/Stylecheck with HAML-Lint
-          scripts:
-            test:
-              body: |
-                #!/bin/sh
-                set -e
-                # lint all view dirs expect styleguide (for now, most components are still auto-converted)
-                find app/views/* -type d -not -path 'app/views/styleguide' -not -path 'app/views/styleguide/**' -exec sh -c 'bundle exec haml-lint {}' \;
+            lint_haml:
+              name: Lint/Stylecheck with HAML-Lint
+              scripts:
+                test:
+                  body: |
+                    #!/bin/sh
+                    set -e
+                    # lint all view dirs expect styleguide (for now, most components are still auto-converted)
+                    find app/views/* -type d -not -path 'app/views/styleguide' -not -path 'app/views/styleguide/**' -exec sh -c 'bundle exec haml-lint {}' \;
 
-        lint_ruby:
-          name: Lint/Stylecheck with Rubocop
-          scripts:
-            test:
-              body: bundle exec rubocop
+            lint_ruby:
+              name: Lint/Stylecheck with Rubocop
+              scripts:
+                test:
+                  body: bundle exec rubocop
 
+
+
+        javascript:
+          task-defaults:
+            traits:
+              nodejs: true
+            scripts:
+              npm_install:
+                body: 'npm install'
+              test:
+                start-when:
+                  - script: npm_install
+
+          tasks:
+            lint_coffeescript:
+              name: Lint/Stylecheck with Coffeelint
+              scripts:
+                test:
+                  start-when:
+                    - script: npm_install
+                  body: |
+                    #!/bin/bash
+                    set -e
+                    for F in app/assets/javascripts/**/*.{coffee,cjsx}; do
+                      npm run -s coffeelint -- $F
+                    done
